Migration to the Kernel API. Implementation of squire sum kernel.